[package]
name = "dsplce-co-throbberous"
version = "0.1.4-supabase-plus-0.8"
edition = "2021"
authors = ["trucizna", "v1olen <przemek@dsplce.co>"]
description = "This is a fork of https://crates.io/crates/throbberous, go to the original repository if you want to use as a dep"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/throbberous"
readme = "README.md"
keywords = ["progress-bar", "spinner", "throbber", "async", "cli"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "asynchronous",
    "development-tools",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.29"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = []
